--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databasename=JulPaHjul;user=julpahjul;password=julpahjul
+spring.datasource.url=jdbc:sqlserver://192.168.25.143:1433;databasename=JulPaHjul;user=julpahjul;password=julpahjul
