css seems to work now

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.datasource.url=jdbc:sqlserver://192.168.25.143:1433;databasename=JulPaHjul;user=julpahjul;password=julpahjul
+spring.thymeleaf.cache=false
